--- a/dashipy/environment.yml
+++ b/dashipy/environment.yml
@@ -3,12 +3,13 @@ channels:
   - conda-forge
 dependencies:
   - python
+  # Dependencies
   - plotly
+  - pyaml
   - tornado
-  # Coding
+  # Dev Dependencies
   - black
   - flake8
-  # Testing
   - pytest
   - pytest-cov
   - requests-mock
