--- a/dashipy/pyproject.toml
+++ b/dashipy/pyproject.toml
@@ -18,6 +18,8 @@ keywords = [
 license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
+  "plotly",
+  "pyaml",
   "tornado",
 ]
 classifiers = [
