have multiple panels now

--- a/dashipy/my-config.yaml
+++ b/dashipy/my-config.yaml
@@ -1,5 +1,3 @@
 panels:
-  - id: panel_1
-    code: "my_panels:get_panel_1"
-  - id: panel_2
-    code: "my_panels:get_panel_2"
+  - my_panels.render_panel_1
+  - my_panels.render_panel_2
