--- a/dashipy/pyproject.toml
+++ b/dashipy/pyproject.toml
@@ -18,9 +18,10 @@ keywords = [
 license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
+  "pandas",
   "plotly",
   "pyaml",
-  "tornado",
+  "tornado"
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
