--- a/dashi/package.json
+++ b/dashi/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "deep-diff": "^1.0.2",
     "immer": "^10.1.1",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/deep-diff": "^1.0.5",
     "@types/node": "^20.11.17",
     "@types/plotly.js": "^2.33.4",
     "@types/react": "^18.2.43",
