--- a/dashi/package.json
+++ b/dashi/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vite": "^5.4.6",
+    "vite-plugin-dts": "^4.2.4",
     "vitest": "^2.1.1"
   }
 }
