--- a/dashi/package.json
+++ b/dashi/package.json
@@ -12,18 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "microdiff": "^1.4.0"
+    "plotly.js": "^2.35.2",
+    "microdiff": "^1.4.0",
+    "react-plotly.js": "^2.6.0",
+    "zustand": "^5.0.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
     "@emotion/styled": ">=11",
     "@fontsource/roboto": ">=5",
     "@mui/material": ">=6",
-    "plotly.js": ">=2",
     "react": ">=18",
-    "react-dom": ">=18",
-    "react-plotly.js": ">=2",
-    "zustand": ">=5"
+    "react-dom": ">=18"
   },
   "devDependencies": {
     "@emotion/react": "^11.13.3",
@@ -43,13 +43,10 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "jsdom": "^25.0.0",
-    "plotly.js": "^2.35.2",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-plotly.js": "^2.6.0",
-    "zustand": "^5.0.0-rc.2",
     "vite": "^5.4.6",
     "vite-plugin-dts": "^4.2.4",
     "vitest": "^2.1.1"
