--- a/dashi/package.json
+++ b/dashi/package.json
@@ -3,6 +3,13 @@
   "private": true,
   "version": "0.0.3",
   "type": "module",
+  "files": ["dist"],
+  "exports": {
+    ".": {
+      "types": "./dist/lib/index.d.ts",
+      "module": "./dist/lib/index.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "test": "vitest",
@@ -47,6 +54,7 @@
     "typescript": "^5.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.4.6",
     "vite-plugin-dts": "^4.2.4",
     "vitest": "^2.1.1"
