--- a/dashi/tsconfig.json
+++ b/dashi/tsconfig.json
@@ -22,7 +22,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "verbatimModuleSyntax": true,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
