--- a/dashi/package.json
+++ b/dashi/package.json
@@ -6,8 +6,8 @@
   "files": ["dist"],
   "exports": {
     ".": {
-      "types": "./dist/lib/index.d.ts",
-      "module": "./dist/lib/index.js"
+      "types": "./dist/index.d.ts",
+      "module": "./dist/dashi.js"
     }
   },
   "scripts": {
