--- a/dashi/package.json
+++ b/dashi/package.json
@@ -1,13 +1,15 @@
 {
   "name": "dashi",
-  "private": true,
   "version": "0.0.3",
   "type": "module",
   "files": ["dist"],
+  "module": "./dist/dashi.js",
+  "main": "./dist/dashi.umd.cjs",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "module": "./dist/dashi.js"
+      "module": "./dist/dashi.js",
+      "require": "./dist/dashi.umd.cjs"
     }
   },
   "scripts": {
@@ -49,6 +51,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "glob": "^11.0.0",
     "jsdom": "^25.0.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
