--- a/dashi/package.json
+++ b/dashi/package.json
@@ -26,11 +26,10 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.4",
     "microdiff": "^1.4.0",
-    "plotly.js": "^2.35.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-plotly.js": "^2.6.0",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "react-vega": "^7.6.0"
   },
   "peerDependencies": {
     "react": ">=17",
@@ -38,10 +37,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "@types/plotly.js": "^2.33.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "@types/react-plotly.js": "^2.6.3",
+    "@types/react-vega": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
