--- a/dashi/package.json
+++ b/dashi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashipopashi",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An experimental library for integrating interactive charts into existing JavaScript applications.",
   "type": "module",
   "files": ["dist", "README.md"],
@@ -46,7 +46,7 @@
     "@fontsource/roboto": "^5.0.5",
     "@mui/material": "^5.15",
     "microdiff": "^1.4.0",
-    "plotly.js-dist-min": "^2.35.2",
+    "plotly.js": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
