--- a/dashi/package.json
+++ b/dashi/package.json
@@ -49,10 +49,12 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.5",
+    "@mui/icons-material": "^6.1.4",
     "microdiff": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-vega": "^7.6.0",
+    "vega-lite": "^5.21.0",
     "zustand": "^5.0.0"
   },
   "peerDependencies": {
