--- a/dashi/package.json
+++ b/dashi/package.json
@@ -49,6 +49,7 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.5",
+    "memoize-one": "^6.0.0",
     "microdiff": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
