--- a/dashipy/pyproject.toml
+++ b/dashipy/pyproject.toml
@@ -19,7 +19,7 @@ license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
   "pandas",
-  "plotly",
+  "altair",
   "pyaml",
   "tornado"
 ]
