--- a/dashipy/pyproject.toml
+++ b/dashipy/pyproject.toml
@@ -18,10 +18,7 @@ keywords = [
 license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
-  "pandas",
-  "plotly",
-  "pyaml",
-  "tornado"
+  "altair",
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
@@ -61,6 +58,11 @@ dev = [
   "pytest",
   "pytest-cov",
   "requests-mock",
+]
+demo = [
+  "pyaml",
+  "pandas",
+  "tornado",
 ]
 
 [project.urls]
