--- a/chartlets.py/pyproject.toml
+++ b/chartlets.py/pyproject.toml
@@ -54,6 +54,13 @@ dev = [
   "pytest",
   "pytest-cov",
   "requests-mock",
+  "twine",
+  "build",
+  "hatch"
+]
+doc = [
+  "mkdocs",
+  "mkdocs-material"
 ]
 demo = [
   "pyaml",
