Initial component docs

--- a/chartlets.py/pyproject.toml
+++ b/chartlets.py/pyproject.toml
@@ -60,7 +60,9 @@ dev = [
 ]
 doc = [
   "mkdocs",
-  "mkdocs-material"
+  "mkdocs-material",
+  "mkdocstrings",
+  "mkdocstrings-python"
 ]
 demo = [
   "pyaml",
