--- a/.github/workflows/chartlets-ci.yml
+++ b/.github/workflows/chartlets-ci.yml
@@ -11,7 +11,8 @@ jobs:
           uses: mamba-org/setup-micromamba@v1
           with:
             environment-file: chartlets.py/environment.yml
-        - name: Run tests
+        - name: Run unit tests
+          shell: bash -l {0}
           run: |
             cd chartlets.py 
             pytest
