--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,24 +1,11 @@
-name: Chartlets CI workflow
-on: [push]
+name: Frontend CI workflow
 
-jobs:
-  backend:
-      runs-on: ubuntu-latest
-      steps:
-        - name: git-checkout chartlets
-          uses: actions/checkout@v4
-          
-        - name: Set up Micromamba
-          uses: mamba-org/setup-micromamba@v1
-          with:
-            environment-file: chartlets.py/environment.yml
-            
-        - name: Run unit tests
-          shell: bash -l {0}
-          run: |
-            cd chartlets.py 
-            pytest
-            
+on: 
+  push:
+    paths:
+      - chartlets.js/**
+
+jobs:       
   frontend:
     runs-on: ubuntu-latest
     steps:
