--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
 
 jobs:
-  python-unittests:
+  python-tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -44,7 +44,7 @@ jobs:
   PyPi-Deploy:
     name: Publish Python Package to PyPI
     runs-on: ubuntu-latest
-    needs: python-unittests
+    needs: python-tests
 
     steps:
     - uses: actions/checkout@v4
@@ -68,9 +68,31 @@ jobs:
         pip install twine
         python -m twine upload --username __token__ --password ${{ secrets.PYPI_API_TOKEN }} dist/*
 
+  npm-tests:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+        # See supported Node.js release schedule at
+        # https://nodejs.org/en/about/releases/
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run lint
+      - run: npm run build
+      - run: npm run test
+  
   npm-Deploy:
     name: Publish TS-React Package to npmjs
     runs-on: ubuntu-latest
+    needs: npm-tests
 
     steps:
       - uses: actions/checkout@v4
@@ -81,8 +103,6 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
-      - run: npm run lint
-      - run: npm run test
       - run: npm run build
       - run: npm publish --access public
         env:
