--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
+    defaults:
+      run:
+        working-directory: chartlets.py 
 
     steps:
     - uses: actions/checkout@v3
@@ -22,13 +25,11 @@ jobs:
         
     - name: Install dependencies
       run: |
-        cd chartlets.py 
         python -m pip install --upgrade pip
         pip install .[dev]
         
     - name: Lint with flake8
       run: |
-        cd chartlets.py 
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -48,6 +49,9 @@ jobs:
     name: Publish Python Package to PyPI
     runs-on: ubuntu-latest
     needs: python-tests
+    defaults:
+      run:
+        working-directory: chartlets.py 
 
     steps:
     - uses: actions/checkout@v4
@@ -59,29 +63,28 @@ jobs:
         
     - name: Install dependencies
       run: |
-        cd chartlets.py 
         python -m pip install --upgrade pip
         pip install build
         
     - name: Build package
       run: |
-        cd chartlets.py 
         python -m build
         
     - name: Publish to PyPI
       run: |
-        cd chartlets.py 
         pip install twine
         python -m twine upload --username __token__ --password ${{ secrets.PYPI_API_TOKEN }} dist/*
 
   npm-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
         # See supported Node.js release schedule at
         # https://nodejs.org/en/about/releases/
+    defaults:
+      run:
+        working-directory: chartlets.js
 
     steps:
       - uses: actions/checkout@v3
@@ -107,6 +110,9 @@ jobs:
     name: Publish TS-React Package to npmjs
     runs-on: ubuntu-latest
     needs: npm-tests
+    defaults:
+      run:
+        working-directory: chartlets.js
 
     steps:
       - uses: actions/checkout@v4
