--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
+    defaults:
+      run:
+        working-directory: chartlets.py 
 
     steps:
     - uses: actions/checkout@v3
@@ -45,6 +48,9 @@ jobs:
     name: Publish Python Package to PyPI
     runs-on: ubuntu-latest
     needs: python-tests
+    defaults:
+      run:
+        working-directory: chartlets.py 
 
     steps:
     - uses: actions/checkout@v4
@@ -70,12 +76,14 @@ jobs:
 
   npm-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
         # See supported Node.js release schedule at
         # https://nodejs.org/en/about/releases/
+    defaults:
+      run:
+        working-directory: chartlets.js
 
     steps:
       - uses: actions/checkout@v3
@@ -93,6 +101,9 @@ jobs:
     name: Publish TS-React Package to npmjs
     runs-on: ubuntu-latest
     needs: npm-tests
+    defaults:
+      run:
+        working-directory: chartlets.js
 
     steps:
       - uses: actions/checkout@v4
