--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev]
+        pip install .[dev, demo]
         
     - name: Lint with flake8
       run: |
@@ -93,6 +93,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          working-directory: chartlets.js
+          
       - run: npm ci
       - run: npm run lint
       - run: npm run build
@@ -114,6 +116,8 @@ jobs:
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
+          working-directory: chartlets.js
+          
       - run: npm ci
       - run: npm run build
       - run: npm publish --access public
