--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev, demo]
+        pip install .[dev,demo]
         
     - name: Lint with flake8
       run: |
@@ -93,7 +93,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          working-directory: chartlets.js
+          cache-dependency-path: chartlets.js/package-lock.json
           
       - run: npm ci
       - run: npm run lint
@@ -116,7 +116,8 @@ jobs:
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
-          working-directory: chartlets.js
+          cache: 'npm'
+          cache-dependency-path: chartlets.js/package-lock.json
           
       - run: npm ci
       - run: npm run build
