--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,7 +75,7 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        packages-dir: chartlets.py/dist
+        packages_dir: chartlets.py/dist
         verbose: true
 
   npm-tests:
