--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Package and Publish
+name: Package and Publish to PyPi
 
 on:
   release:
@@ -77,53 +77,3 @@ jobs:
         password: ${{ secrets.PYPI_API_TOKEN }}
         packages_dir: chartlets.py/dist
         verbose: true
-
-  npm-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x, 20.x]
-        # See supported Node.js release schedule at
-        # https://nodejs.org/en/about/releases/
-    defaults:
-      run:
-        working-directory: chartlets.js
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: chartlets.js/package-lock.json
-          
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run build
-      - run: npm run test
-  
-  npm-Deploy:
-    name: Publish TS-React Package to npmjs
-    runs-on: ubuntu-latest
-    needs: npm-tests
-    defaults:
-      run:
-        working-directory: chartlets.js
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'npm'
-          cache-dependency-path: chartlets.js/package-lock.json
-          
-      - run: npm ci
-      - run: npm run build
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
