--- a/.github/workflows/publish-backend.yml
+++ b/.github/workflows/publish-backend.yml
@@ -45,7 +45,7 @@ jobs:
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  PyPi-Deploy:
+  PyPi-deploy:
     name: Publish Python Package to PyPI
     runs-on: ubuntu-latest
     needs: python-tests
