Python side of Plot -> VegaChart

--- a/chartlets.py/environment.yml
+++ b/chartlets.py/environment.yml
@@ -4,6 +4,7 @@ channels:
 dependencies:
   # Library Dependencies
   - python >=3.12,<3.13
+  # Optional Dependencies
   - altair
   # Demo Dependencies
   - pandas
