--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -17,22 +17,32 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Install dependencies
+      - name: Install common dependencies
         run: |
           cd chartlets.js 
           npm install 
 
-      - name: Linter
+      - name: Lib lint
         run: |
-          cd chartlets.js  
+          cd chartlets.js/packages/lib  
           npm run lint
 
-      - name: Run frontend tests
+      - name: Lib tests
         run: |
-          cd chartlets.js  
+          cd chartlets.js/packages/lib  
           npm run test
 
-      - name: Build frontend application
+      - name: Lib build
         run: |
-          cd chartlets.js  
+          cd chartlets.js/packages/lib  
+          npm run build
+
+      - name: Demo lint
+        run: |
+          cd chartlets.js/packages/demo  
+          npm run lint
+
+      - name: Demo build
+        run: |
+          cd chartlets.js/packages/demo  
           npm run build
