--- a/chartlets.js/packages/lib/package.json
+++ b/chartlets.js/packages/lib/package.json
@@ -59,9 +59,9 @@
     "zustand": "^5.0"
   },
   "peerDependencies": {
+    "@mui/material": ">=6",
     "react": ">=18",
     "react-dom": ">=18",
-    "@mui/material": ">=6",
     "react-vega": ">=7",
     "vega-themes": ">=2"
   },
@@ -74,6 +74,8 @@
     }
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20.11.17",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -90,6 +92,6 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.6",
     "vite-plugin-dts": "^4.2.4",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.8"
   }
 }
