--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -22,3 +22,9 @@ jobs:
           run: |
             cd chartlets.py 
             pytest
+
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v4
+          with:
+            verbose: true
+            token: ${{ secrets.CODECOV_TOKEN }}
