--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Upload coverage reports for lib to Codecov
         uses: codecov/codecov-action@v4
         with:
+          fail_ci_if_error: true
           directory: chartlets.js/packages/lib/coverage/
           flags: frontend
           verbose: true
